--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   security-scanner:
     build: .
@@ -7,7 +5,8 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - API_KEY=${API_KEY:-test-for-arnica-987}
+      - API_KEYS=${API_KEYS:-your-secure-production-key-2025}
+      - PORT=3000
     volumes:
       # Optional: Mount logs directory if you want to persist logs
       - ./logs:/app/logs
