--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - NODE_ENV=production
       - API_KEYS=${API_KEYS:-your-secure-production-key-2025}
       - PORT=3000
+      - WEBHOOK_URL=${WEBHOOK_URL:-}
+      - WEBHOOK_SECRET=${WEBHOOK_SECRET:-}
     volumes:
       # Optional: Mount logs directory if you want to persist logs
       - ./logs:/app/logs
