--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "test:ci": "jest --ci --coverage --watchAll=false --verbose"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@octokit/auth-app": "^8.0.2",
+    "@octokit/rest": "^22.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
