Fixed integration tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:unit": "jest --testPathPattern=src/.*\\.spec\\.ts$",
-    "test:integration": "jest --testPathPattern=test/integration/.*\\.spec\\.ts$",
+    "test:integration": "jest --config ./test/jest-integration.json",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
     "test:ci": "jest --ci --coverage --watchAll=false --verbose"
   },
